# blackjack

./: CLAUDE.md  blackjack_trainer_claude_code_prompt.md  building_professional_blackjack_card_counting_trainer.md  config.py  pygame_balatro_style_plan.md  pyproject.toml  requirements.txt
api/: __init__.py  main.py  schemas.py  session.py  websocket.py
api/routes/: __init__.py  game.py  stats.py  training.py
core/: __init__.py  cards.py  hand.py
core/counting/: __init__.py  base.py  hilo.py  ko.py  omega2.py  wong_halves.py
core/game/: __init__.py  engine.py  events.py  state.py
core/statistics/: __init__.py  bankroll.py  house_edge.py  kelly.py  probability.py
core/strategy/: __init__.py  basic.py  deviations.py  rules.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: charts.js  game.js  websocket.js
pygame_ui/: config.py  main.py
pygame_ui/components/: __init__.py  button.py  card.py  chip.py  counter.py  heat_map.py  hint_panel.py  panel.py  pixel_card.py  progress_bar.py  remaining_cards.py  strategy_chart.py  toast.py
pygame_ui/core/: __init__.py  animation.py  difficulty_manager.py  engine_adapter.py  export.py  game_settings.py  hand_logger.py  particles.py  scene_manager.py  session_manager.py  sound_generator.py  sound_manager.py  spaced_repetition.py  stats_manager.py
pygame_ui/effects/: crt_filter.py  screen_shake.py  transitions.py
pygame_ui/scenes/: __init__.py  base_scene.py  counting_drill_scene.py  deck_estimation_scene.py  deviation_drill_scene.py  drill_menu_scene.py  (+12 more)
tests/: __init__.py  conftest.py
(+17 files in other folders)
